# rheumlens

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CLAIM_BOUNDARY.md  Dockerfile  LICENSE  MANIFEST_SHA256.txt  README.md  Singularity.def  environment.yml  pyproject.toml  references.bib
analysis_scripts/: build_final_information_package.py  confounding_audit.py  confounding_sensitivity_complete.py  cross_age_transfer_audit.py  extract_public_metadata.py  fold_contained_benchmark.py  ifn_residual_all_cohorts.py  inspect_supplement_xlsx.mjs  marker_lineage_secondary.py  official_composition_baseline.py  plot_corrected_benchmark.py  prepare_geneformer_fixed_sample.py  regularization_aggregation_sensitivity.py  remaining_statistical_audit.py  repeated_cv_sensitivity.py  rerun_coloc_standard.R  rerun_tcell_de_edger.R  rerun_tcell_de_pydeseq2.py  server_evaluate_geneformer_valid.py  server_geneformer_valid_rerun.py  summarize_primary_permutations.py
configs/: project.p6.gse174188.v1.yaml
docs/: ARCHIVAL_DATA_MANIFEST_TEMPLATE.tsv  BMC_GENOMICS_DRAFT_STATUS.md  DATA_AND_CODE_AVAILABILITY.md  FIGURE_AND_TABLE_INDEX.md  NUMERIC_AUDIT_v0.6.md  NUMERIC_AUDIT_v0.6.tsv  NUMERIC_AUDIT_v0.6_AFTER_FIX.md  NUMERIC_AUDIT_v0.6_AFTER_FIX.tsv  REFERENCE_POSITIONING_CHECKLIST.md  RheumLens_manuscript_v0.5_ASSEMBLY_STATUS.md  RheumLens_manuscript_v0.6_FINALIZATION_STATUS.md
evidence_package/: FINAL_MANIFEST_SHA256.csv  GSE135779_to_GSE285773_transfer_predictions.csv  GSE174188_PC1_PC5_covariate_associations.csv  GSE174188_confounding_oof_predictions.csv  GSE174188_disease_covariate_crosstabs.csv  GSE174188_donor_covariates.csv  GSE174188_primary_model_permutation_tests.csv  GSE285773_PC1_PC5_covariate_associations.csv  GSE285773_confounding_oof_predictions.csv  GSE285773_donor_covariates.csv  confounding_model_summary.csv  (+1 more)
(+220 files in other folders)
